nginx_cm.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginxwebapp
spec:
  selector:
    matchLabels:
      app: nginx   # labels to select
  replicas: 1
  template:  # PodTemplate
    metadata:
      name: nginxwebapp
      labels:
        app: nginx
    spec:
      containers:
      - name: nginxwebapp
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-route
          mountPath: "/etc/nginx/nginx.conf"
          subPath: "nginx.conf"
      volumes:
      - name: nginx-route
        configMap:
          name: nginxconfig
          items:
          - key: "nginx.conf"
            path: "nginx.conf"
