app.yml
apiVersion: v1
kind: Service
metadata:
  name: javaappsvc
spec:
  selector:
    app: tesla
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8080
