appv2.yml
apiVersion: v1
kind: Pod
metadata:
  name: javaappv2
  labels:
    name: javaappv2
spec:
  containers:
  - name: java-web-appv2
    image: obinnaaliogor/java-web-app
    resources:
      requests:
        memory: "128Mi"
        cpu: "500m"
      limits:
        memory: "512Mi"
        cpu: "1000m"
    ports:
      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: javawebappsvc2
spec:
  selector:
    app: javaappv2
  ports:
  - port: 80
    targetPort: 8080
