hpadeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpadeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hpadeploymentapp
  template:
    metadata:
      labels:
        app: hpadeploymentapp
    spec:
      containers:
      - name: hpadeployment
        image: obinnaaliogor/maven-web-app
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hpasvc
spec:
  selector:
    app: hpadeploymentapp
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
