javawebapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebpp
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 30
  template:
    metadata:
      name: webapppod
      labels:
        app: webapp
    spec:
      containers:
      - name: javawebapp
        image: obinnaaliogor/java-web-app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8080
