NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-network-pol
  namespace: test
spec:
  podSelector:
    matchLabels: 
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: springapp
      ports:
        - protocol: TCP
          port: 27017
